--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "primerapp",
-    "slug": "primerapp",
+    "name": "D2_DesApp",
+    "slug": "D2_DesApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
