--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primerapp",
+  "name": "E2_DesApp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "18.0.1",
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
