--- a/Desafio-Camassa/app.json
+++ b/Desafio-Camassa/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "D2_DesApp",
-    "slug": "D2_DesApp",
+    "name": "desapp",
+    "slug": "desapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
